[package]
name = "coal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
path-absolutize = "3.1.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
