[package]
name = "coal"
version = "0.1.0"
edition = "2021"
authors = ["Zaki <dev@dotzaki.me>"]
description = "Coalesce your repositories"
repository = "https://github.com/dotzaki/coal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.5", features = ["derive"] }
crossterm = "0.26.1"
path-absolutize = "3.1.0"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
